# torch_adapter

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/torch_adapter/: AdapterModel.py  __init__.py  util.py
src/torch_adapter/hub/: __init__.py
src/torch_adapter/torchvision/: __init__.py
src/torch_adapter/transforms/: __init__.py  composition.py  transform_op.py  util.py
tests/: benchmark.py  util.py
tests/test_runtime/: benchmark.py  test_composition.py  test_inference.py  test_model.py  test_preprocess.py  test_transform.py
